--- a/options.html
+++ b/options.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>AI Summary Settings</title>
     <style>
       body {
@@ -46,22 +44,26 @@
         display: none;
       }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>AI Summary Settings</h1>
 
     <div class="form-group">
-        <label for="api-key">Gemini API Key:</label>
-        <input type="text" id="api-key" placeholder="Enter your Gemini API Key" />
-        <p>
-            You can get an API Key from
-            <a href="https://makersuite.google.com/app/apikey" target="_blank">Google AI Studio</a>
-        </p>
+      <label for="api-key">Gemini API Key:</label>
+      <input type="text" id="api-key" placeholder="Enter your Gemini API key" />
+      <p>
+        You can get an API key from
+        <a href="https://makersuite.google.com/app/apikey" target="_blank"
+          >Google AI Studio</a
+        >
+      </p>
     </div>
 
     <button id="save-button">Save Settings</button>
-    <p id="success-message" class="success-message">Settings saved successfully!</p>
+    <p id="success-message" class="success-message">
+      Settings saved successfully!
+    </p>
 
     <script src="options.js"></script>
-</body>
+  </body>
 </html>
