--- a/popup.html
+++ b/popup.html
@@ -9,18 +9,30 @@
         min-height: 300px;
         padding: 15px;
       }
-
-      h2 {
-        color: #333;
+      .header-row {
+        display: flex;
+        align-items: center;
+        gap: 10px;
         margin-bottom: 15px;
       }
-
+      .header-row img {
+        width: 32px;
+        height: 32px;
+        border-radius: 8px;
+      }
+      h2 {
+        color: #2563eb;
+        margin: 0;
+        font-size: 1.5em;
+        font-weight: bold;
+        letter-spacing: -0.5px;
+        font-family: 'Segoe UI', Arial, sans-serif;
+      }
       .options {
         display: flex;
         gap: 10px;
         margin-bottom: 15px;
       }
-
       button {
         padding: 8px 15px;
         background-color: #4285f4;
@@ -30,25 +42,20 @@
         cursor: pointer;
         font-weight: bold;
       }
-
       button:hover {
         background-color: #3367d6;
       }
-
       #copy-btn {
         background-color: #34a853;
       }
-
       #copy-btn:hover {
         background-color: #2e8b57;
       }
-
       #summary-type {
         padding: 8px;
         border-radius: 4px;
         border: 1px solid #ddd;
       }
-
       #result {
         margin-top: 15px;
         padding: 15px;
@@ -60,22 +67,18 @@
         white-space: pre-wrap;
         line-height: 1.5;
       }
-
       #result ul {
         padding-left: 20px;
       }
-
       #result li {
         margin-bottom: 10px;
       }
-
       .loading {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 150px;
       }
-
       .loader {
         border: 4px solid #f3f3f3;
         border-top: 4px solid #3498db;
@@ -84,7 +87,6 @@
         height: 30px;
         animation: spin 1s linear infinite;
       }
-
       @keyframes spin {
         0% {
           transform: rotate(0deg);
@@ -96,8 +98,10 @@
     </style>
   </head>
   <body>
-    <h2>AI Summary</h2>
-
+    <div class="header-row">
+      <img src="icon.png" alt="AI Summarizer Logo" />
+      <h2>AI Summary</h2>
+    </div>
     <div class="options">
       <select id="summary-type">
         <option value="brief">Brief Summary</option>
@@ -107,12 +111,11 @@
       <button id="summarize">Summarize This Page</button>
       <button id="copy-btn">Copy Summary</button>
     </div>
-
     <div id="result">
       Select a summary type and click 'Summarize This Page' to generate a
       summary.
     </div>
-
     <script src="popup.js"></script>
   </body>
+</html>
 </html>
